--- a/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/Configure.cshtml
+++ b/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/Configure.cshtml
@@ -14,7 +14,8 @@
                         <nop-label asp-for="RecipientWalletAddress" />
                     </div>
                     <div class="col-md-9">
-                        @Html.TextBoxFor(m => m.RecipientWalletAddress)
+                        <nop-editor asp-for="RecipientWalletAddress" />
+                        <span asp-validation-for="RecipientWalletAddress"></span>
                     </div>
                 </div>
                 <div class="form-group">
