--- a/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/PaymentInfo.cshtml
+++ b/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/PaymentInfo.cshtml
@@ -1,10 +1,5 @@
 ﻿@{
     Layout = "";
 }
-<table width="100%" cellpadding="0" cellspacing="0">
-    <tr>
-        <td>
-            <p><b>SJ Coin</b></p>
-        </td>
-    </tr>
-</table>
+@model Nop.Plugin.Payments.SJCoin.Models.PaymentInfoModel
+<label asp-for="RecipientWalletAddress">@T("Payment.RecipientWalletAddress"):@Model.RecipientWalletAddress</label>
