--- a/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/Configure.cshtml
+++ b/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/Configure.cshtml
@@ -11,11 +11,47 @@
             <div class="panel-body">
                 <div class="form-group">
                     <div class="col-md-3">
-                        <nop-label asp-for="RecipientWalletAddress" />
+                        <nop-label asp-for="ContractAddress" />
                     </div>
                     <div class="col-md-9">
-                        <nop-editor asp-for="RecipientWalletAddress" />
-                        <span asp-validation-for="RecipientWalletAddress"></span>
+                        <nop-editor asp-for="ContractAddress" />
+                        <span asp-validation-for="ContractAddress"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        <nop-label asp-for="Url" />
+                    </div>
+                    <div class="col-md-9">
+                        <nop-editor asp-for="Url" />
+                        <span asp-validation-for="Url"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        <nop-label asp-for="AccountPrivateKey" />
+                    </div>
+                    <div class="col-md-9">
+                        <nop-editor asp-for="AccountPrivateKey" />
+                        <span asp-validation-for="AccountPrivateKey"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        <nop-label asp-for="TransactionReceiptCheckIntervalInSeconds" />
+                    </div>
+                    <div class="col-md-9">
+                        <nop-editor asp-for="TransactionReceiptCheckIntervalInSeconds" />
+                        <span asp-validation-for="TransactionReceiptCheckIntervalInSeconds"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3">
+                        <nop-label asp-for="TransactionDetailsBaseUrl" />
+                    </div>
+                    <div class="col-md-9">
+                        <nop-editor asp-for="TransactionDetailsBaseUrl" />
+                        <span asp-validation-for="TransactionDetailsBaseUrl"></span>
                     </div>
                 </div>
                 <div class="form-group">
