--- a/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Info.cshtml
+++ b/src/Presentation/Nop.Web/Areas/Admin/Views/Order/_OrderDetails.Info.cshtml
@@ -809,7 +809,7 @@
                                         if(item.Value.ToString().ToLower().StartsWith("http"))
                                         {
                                             <li>
-                                                @item.Key: <a href=item.Value.ToString()> Details </a>
+                                                @item.Key: <a href=@item.Value.ToString()> Details </a>
                                             </li>
                                         }
                                         else
