--- a/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/PaymentInfo.cshtml
+++ b/src/Plugins/Nop.Plugin.Payments.SJCoin/Views/PaymentInfo.cshtml
@@ -3,14 +3,14 @@
 }
 
 @model Nop.Plugin.Payments.SJCoin.Models.PaymentInfoModel
-
-<div class="form-group">
-    <div class="col-md-3">
-        <label asp-for="BuyerWalletAddress">@T("Payment.BuyerWalletAddress"):</label>
-    </div>
-
-    <div class="col-md-9">
-        <input type="text" asp-for="BuyerWalletAddress" autocomplete="off" />
-        <span asp-validation-for="BuyerWalletAddress"></span>
-    </div>
-</div>
+<table width="100%" cellpadding="0" cellspacing="0">
+    <tr>
+        <td>
+            <p><b>@T("Payment.BuyerWalletAddress"):</b></p>
+        </td>
+        <td>
+            <input type="text" asp-for="BuyerWalletAddress" autocomplete="off" />
+            <span asp-validation-for="BuyerWalletAddress"></span>
+        </td>
+    </tr>
+</table>
